# portfolio

./: README.md  printtree.py  pyproject.toml
.github/workflows/: static.yml
source/: about.rst  case_studies.rst  conf.py  contact.rst  index.rst  projects.rst  refs.bib  research.rst  roles.rst  studies.rst
source/_static/: custom.css
source/projects/: 2_Homogenization.rst  3_XLAM_AxisVM.rst  4_Catamaran.rst  5_SigmaEpsilon.rst  7_TenderPlatform.rst
source/roles/: data_scientist.rst  educator.rst  optimization_engineer.rst  researcher.rst  software_developer.rst  structural_engineer.rst  technical_writer.rst
