[tool.poetry]
name = "portfolio"
version = "0.0.1"
description = "My portfolio"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sphinx = "^7.4.7"
furo = "^2024.7.18"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
